--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,6 @@ jobs:
 
     - name: Build CLI
       run: |
-        GOOS=linux GOARCH=amd64 go build -o bin/cmdgenie-linux-amd64
-        GOOS=darwin GOARCH=amd64 go build -o bin/cmdgenie-darwin-amd64
-        GOOS=windows GOARCH=amd64 go build -o bin/cmdgenie-windows-amd64.exe
+        GOOS=linux GOARCH=amd64 go build -o bin/cmdgenie-linux-amd64 cmd/cli/main.go
+        GOOS=darwin GOARCH=amd64 go build -o bin/cmdgenie-darwin-amd64 cmd/cli/main.go
+        GOOS=windows GOARCH=amd64 go build -o bin/cmdgenie-windows-amd64.exe cmd/cli/main.go
