--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,9 @@ on:
       tag:
         description: 'Git tag to create a release for'
         required: true
+      description:
+        description: 'Description for the GitHub Release'
+        required: true
 
 permissions:
   contents: write
@@ -40,5 +43,6 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
+          body: ${{ env.description }}
           tag_name: ${{ env.tag }}
           files: 'bin/*'
